--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Panduan Pelayanan - Kantor kesyahbandaran dan Otoritas Pelabuhan Utama Makassar </title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Swiper CSS -->
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+/>
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <style>
       .aspect-w-16 {
@@ -57,11 +65,13 @@
   <body class="bg-gray-50 font-sans">
     <!-- Header Section -->
     <header class="bg-blue-900 text-white shadow-lg">
-      <div class="container mx-auto px-4 py-6">
+      <div class="container mx-auto px-0 py-1">
         <div class="flex flex-col md:flex-row justify-between items-center">
-          <div class="flex items-center mb-4 md:mb-0">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Logo_Kementerian_Perhubungan_Indonesia_%28Kemenhub%29.png" alt="Logo" class="mr-3" width="100" />
-            <div>
+          <div class="flex items-center mb-0 md:mb-0">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/Logo_Kementerian_Perhubungan_Indonesia_%28Kemenhub%29.png"
+       alt="Logo"
+       class="mr-3 w-20 md:w-[100px]" />
+  <div>
               <h1 class="text-xl md:text-2xl font-bold"> Kantor Kesyahbandaran dan Otoritas <br /> Pelabuhan Utama Makassar </h1>
               <p class="text-sm text-blue-200">Pelayanan</p>
             </div>
@@ -70,12 +80,61 @@
       </div>
     </header>
     <!-- Hero Section -->
-    <section class="bg-blue-700 text-white py-12">
-      <div class="container mx-auto px-4 text-center">
-        <h2 class="text-3xl md:text-4xl font-bold mb-4"> PANDUAN PELAYANAN ADMINISTRASI PERKAPALAN DAN KEPELAUTAN </h2>
-        <p class="max-w-2xl mx-auto text-blue-100"> Berikut panduan lengkap untuk pengurusan dokumen kepelautan dan penyijilan awak kapal pada bidang perkapalan dan kepelautan seksi kepelautan di Kantor Kesyahbandaran dan Otoritas Pelabuhan Utama Makassar </p>
-      </div>
-    </section>
+<!-- Carousel Section -->
+<div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+
+<!-- Slide 1 -->
+<!-- Slide 1 (teks) -->
+<section
+  class="swiper-slide relative bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white h-[200px] flex items-center justify-center py-5 px-4"
+>
+  <!-- Overlay -->
+  <div class="absolute inset-0 bg-blue-900/60"></div>
+
+  <!-- Konten teks -->
+  <div class="relative container mx-auto text-center">
+    <h2 class="text-xl md:text-2xl font-bold mb-2">
+      PANDUAN PELAYANAN ADMINISTRASI PERKAPALAN DAN KEPELAUTAN
+    </h2>
+    <p class="max-w-xl mx-auto text-blue-100 text-xs md:text-sm">
+      Berikut panduan lengkap untuk pengurusan dokumen kepelautan dan penyijilan awak kapal pada bidang perkapalan dan kepelautan
+    </p>
+  </div>
+</section>
+
+<!-- Slide 2 (gambar) -->
+<section
+  class="swiper-slide relative bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4"
+>
+  <!-- Overlay -->
+  <div class="absolute inset-0 bg-blue-900/60"></div>
+
+  <!-- Gambar utama -->
+  <div class="relative container mx-auto flex justify-center">
+    <img
+      src="https://hubla.dephub.go.id/storage/ksopumakassar/images/slider/10480/WzANZQCzTUW3jBhWGlHwl5tiDgRTaALWEOw7uVe4.png"
+      alt="Slide Gambar"
+      class="max-h-[200px] w-auto mx-auto rounded-xl shadow-lg"
+    />
+  </div>
+</section>
+
+
+
+
+
+
+
+  </div>
+
+  <!-- Navigasi -->
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-pagination"></div>
+</div>
+
+    
     <!-- Services Grid Section -->
     <section class="w-full px-8 py-8">
       <div class="text-center mb-8">
@@ -462,6 +521,24 @@
         document.getElementById("service-modal").classList.add("hidden");
         document.body.style.overflow = "auto"; // buka kembali scroll halaman
       }
+
+  var swiper = new Swiper(".mySwiper", {
+    loop: true,
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
+    },
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+    autoplay: {
+      delay: 4000,
+      disableOnInteraction: false,
+    },
+  });
+
+
     </script>
   </body>
 </html>
