--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     </header>
     <!-- Hero Section -->
     <!-- Carousel Section -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
+   <div class="swiper mySwiper relative z-0">
+  <div class="swiper-wrapper">
         <!-- Slide 1 -->
-        <section class="swiper-slide relative bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white h-[200px] flex items-center justify-center py-5 px-4">
+        <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white h-[200px] flex items-center justify-center py-5 px-4">
           <!-- Overlay -->
           <div class="absolute inset-0 bg-blue-900/60"></div>
           <!-- Konten teks -->
@@ -88,7 +88,7 @@
           </div>
         </section>
         <!-- Slide 2 (gambar) -->
-        <section class="swiper-slide relative bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4">
+        <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4">
           <!-- Overlay -->
           <div class="absolute inset-0 bg-blue-900/60"></div>
           <!-- Gambar utama -->
