update isi menu dan slide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <!-- Swiper JS -->
+     
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <style>
@@ -56,6 +57,18 @@
         color: #3b82f6;
         /* Tailwind's blue-600 */
       }
+ ul.list-rapi {
+    list-style-type: disc;
+    list-style-position: outside;
+    padding-left: 1.5em; /* jarak bullet dari kiri */
+  }
+
+  ul.list-rapi li {
+    padding-left: 0.5em; /* jarak teks dari bullet */
+    text-indent: -0.05em; /* agar baris kedua sejajar dengan baris pertama */
+    margin-bottom: 0.5em; /* beri jarak antar item */
+    text-align: justify;
+  }
     </style>
   </head>
   <body class="bg-gray-50 font-sans">
@@ -77,31 +90,33 @@
     <!-- Carousel Section -->
    <div class="swiper mySwiper relative z-0">
   <div class="swiper-wrapper">
-        <!-- Slide 1 -->
-        <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white h-[200px] flex items-center justify-center py-5 px-4">
-          <!-- Overlay -->
-          <div class="absolute inset-0 bg-blue-900/60"></div>
-          <!-- Konten teks -->
-          <div class="relative container mx-auto text-center">
-            <h2 class="text-xl md:text-2xl font-bold mb-2"> PANDUAN PELAYANAN ADMINISTRASI PERKAPALAN DAN KEPELAUTAN </h2>
-            <p class="max-w-xl mx-auto text-blue-100 text-xs md:text-sm"> Berikut panduan lengkap untuk pengurusan dokumen kepelautan dan penyijilan awak kapal pada bidang perkapalan dan kepelautan </p>
-          </div>
-        </section>
-        <!-- Slide 2 (gambar) -->
-        <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4">
-          <!-- Overlay -->
-          <div class="absolute inset-0 bg-blue-900/60"></div>
-          <!-- Gambar utama -->
-          <div class="relative container mx-auto flex justify-center">
-            <img src="https://hubla.dephub.go.id/storage/ksopumakassar/images/slider/10480/WzANZQCzTUW3jBhWGlHwl5tiDgRTaALWEOw7uVe4.png" alt="Slide Gambar" class="max-h-[200px] w-auto mx-auto rounded-xl shadow-lg" />
-          </div>
-        </section>
+    <!-- Slide 1 -->
+    <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white h-[200px] flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
+      <div class="absolute inset-0 bg-blue-900/60"></div>
+      <div class="relative container mx-auto text-center">
+        <h2 class="text-xl md:text-2xl font-bold mb-2">PANDUAN PELAYANAN ADMINISTRASI PERKAPALAN DAN KEPELAUTAN</h2>
+        <p class="max-w-xl mx-auto text-blue-100 text-xs md:text-sm">
+          Berikut panduan lengkap untuk pengurusan dokumen kepelautan dan penyijilan awak kapal pada bidang perkapalan dan kepelautan
+        </p>
       </div>
-      <!-- Navigasi -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div>
-    </div>
+    </section>
+
+    <!-- Slide 2 -->
+    <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
+      <div class="absolute inset-0 bg-blue-900/60"></div>
+      <div class="relative container mx-auto flex justify-center">
+        <img src="https://hubla.dephub.go.id/storage/ksopumakassar/images/slider/10480/WzANZQCzTUW3jBhWGlHwl5tiDgRTaALWEOw7uVe4.png" alt="Slide Gambar" class="max-h-[200px] w-auto mx-auto rounded-xl shadow-lg" />
+      </div>
+    </section>
+  </div>
+
+  <!-- Tombol navigasi -->
+  <div class="swiper-button-next"></div>
+  <div class="swiper-button-prev"></div>
+
+  <!-- Pagination opsional -->
+  <div class="swiper-pagination"></div>
+</div>
     <!-- Services Grid Section -->
     <section class="w-full px-8 py-8">
       <div class="text-center mb-8">
@@ -258,30 +273,21 @@
 			<h3 class="font-semibold">Tujuan</h3>
 			<p>Penerbitan buku pelaut untuk pelaut yang belum pernah memiliki buku pelaut sebelumnya.</p>
 			<h3 class="font-semibold mt-3">Persyaratan</h3>
-			<ul class="list-disc list-inside">
-				<li>Fotokopi KTP</li>
-				<li>Pas foto 4x6 latar biru</li>
-				<li>Sertifikat BST</li>
-				<li>Surat keterangan sehat</li>
+	<ul class="list-rapi">
+				<li>Surat Pernyataan Belum Pernah Memiliki BUKU PELAUT</li>
+				<li>Fotocopy Sertifikat Keahlian Pelaut dan atau Sertifikat Keterampilan Pelaut</li>
+        <li>Surat keterangan PRALA bagi TARUNA/I yang akan melaksanakan praktek kerja laut</li>
+        <li>Dokumen asli sertifikat keahlian pelaut atau sertifikat keterampilan pelaut</li>
+        <li>Surat keterangan sehat</li>
+        <li>Surat keterangan catatan kepolisian (SKCK)</li>
+        <li>Fotocopy AKTE KELAHIRAN/Surat kenal lahir/Kartu tanda pendudu (KTP)</li>
+				<li>Pas Foto ukuran 5x5 dan 3x4 masing masing sebanyak 3 lembar memakai baju putih polos lengan panjang berdasi hitam dengan latar belakang biru atau bagian NAUTIKA (dek) dan merah untuk TEKNIKA (mesin)</li>
 			</ul>
-			<h3 class="font-semibold mt-3">Prosedur</h3>
-			<ol class="list-decimal list-inside">
-				<li>Mengisi formulir permohonan</li>
-				<li>Menyerahkan dokumen ke loket</li>
-				<li>Verifikasi oleh petugas</li>
-				<li>Penerbitan buku pelaut</li>
-			</ol>
-			<h3 class="font-semibold mt-3">Video Tutorial</h3>
-			<div class="aspect-w-16 aspect-h-9">
-				<iframe 
-    class="w-full rounded-lg" 
-    height="315" 
-    src="https://www.youtube.com/embed/k9tlle32LU8" 
-    frameborder="0" 
-    allowfullscreen
-  ></iframe>
-			</div>
-
+			<h3 class="font-semibold mt-3">Link Terkait :</h3>
+	<ul class="list-rapi">
+				<li><a href="https://dokumenpelaut.dephub.go.id/" ,,class="text-blue-600">Pendaftaran Buku Pelaut</a></li>
+        <li><a href="https://vt.tiktok.com/ZSB2vuE5V/" class="text-blue-600"</a>Tutorial</li>
+			</ul>
         `;
             break;
           case "Pengurusan Buku Pelaut Merah":
@@ -331,10 +337,15 @@
 			<h3 class="font-semibold">Tujuan</h3>
 			<p>Penggantian buku pelaut yang hilang, rusak, atau penuh.</p>
 			<h3 class="font-semibold mt-3">Persyaratan</h3>
-			<ul class="list-disc list-inside">
-				<li>Surat kehilangan dari kepolisian (jika hilang)</li>
-				<li>Buku pelaut lama (jika rusak/penuh)</li>
-				<li>Pas foto</li>
+			<ul class="list-rapi">
+				<li>Fotocopy Sertifikat Keahlian Pelaut dan atau Sertifikat Keterampilan Pelaut</li>
+         <li>Surat keterangan PRALA bagi TARUNA/I yang akan melaksanakan praktek kerja laut</li>
+        <li>Dokumen asli sertifikat keahlian pelaut atau sertifikat keterampilan pelaut</li>
+        <li>Surat keterangan masa berlayar yang diketahuii syahbandar atau KBRI setempat bagi pelaut yang pernah berlayar</li>
+        <li>Surat keterangan sehat</li>
+        <li>Fotocopy AKTE KELAHIRAN/Surat kenal lahir/Kartu tanda pendudu (KTP)</li>
+				<li>Buku pelaut lama (Asli)</li>
+				<li>Surat kehilangan dari kepolisian apabila buku hilang</li>
 			</ul>
 			<h3 class="font-semibold mt-3">Prosedur</h3>
 			<ol class="list-decimal list-inside">
@@ -472,10 +483,13 @@
 			<h3 class="font-semibold">Tujuan</h3>
 			<p>Pengesahan atau legalisasi dokumen pelaut atau kapal.</p>
 			<h3 class="font-semibold mt-3">Persyaratan</h3>
-			<ul class="list-disc list-inside">
-				<li>Dokumen yang akan disijil</li>
-				<li>Surat permohonan</li>
-				<li>Identitas pemohon</li>
+	<ul class="list-rapi">
+				<li>Surat permohonan kepada Kesyahbandaran dan Otoritas Pelabuhan Utama Makassar</li>
+				<li>Fotocopy perjanjian kerja laut (PKL)</li>
+				<li>Daftar Crew List</li>
+        <li>Buku pelaut asli</li>
+        <li>Surat kesehatan pelaut</li>
+        <li>Surat pengantar perusahaan/mutasi</li>
 			</ul>
 			<h3 class="font-semibold mt-3">Prosedur</h3>
 			<ol class="list-decimal list-inside">
@@ -499,21 +513,44 @@
         document.getElementById("service-modal").classList.add("hidden");
         document.body.style.overflow = "auto"; // buka kembali scroll halaman
       }
-      var swiper = new Swiper(".mySwiper", {
-        loop: true,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-        autoplay: {
-          delay: 4000,
-          disableOnInteraction: false,
-        },
-      });
+      // var swiper = new Swiper(".mySwiper", {
+      //   loop: true,
+      //   pagination: {
+      //     el: ".swiper-pagination",
+      //     clickable: true,
+      //   },
+      //   navigation: {
+      //     nextEl: ".swiper-button-next",
+      //     prevEl: ".swiper-button-prev",
+      //   },
+      //   autoplay: {
+      //     delay: 4000,
+      //     disableOnInteraction: false,
+      //   },
+   const swiper = new Swiper(".mySwiper", {
+  loop: true,
+  speed: 800,
+  autoplay: false,
+  effect: "creative",
+  creativeEffect: {
+    prev: {
+      translate: ["-20%", 0, -1], // geser dari kiri
+      opacity: 0.7,
+    },
+    next: {
+      translate: ["100%", 0, 0], // geser dari kanan
+    },
+  },
+  navigation: {
+    nextEl: ".swiper-button-next",
+    prevEl: ".swiper-button-prev",
+  },
+  pagination: {
+    el: ".swiper-pagination",
+    clickable: true,
+  },
+  });
+
     </script>
   </body>
 </html>
