--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
     padding-left: 0.5em; /* jarak teks dari bullet */
     text-indent: -0.05em; /* agar baris kedua sejajar dengan baris pertama */
     margin-bottom: 0.5em; /* beri jarak antar item */
-    text-align: justify;
   }
     </style>
   </head>
@@ -88,10 +87,10 @@
     </header>
     <!-- Hero Section -->
     <!-- Carousel Section -->
-   <div class="swiper mySwiper relative z-0">
+ <div class="swiper mySwiper relative z-0 overflow-hidden">
   <div class="swiper-wrapper">
     <!-- Slide 1 -->
-    <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white h-[200px] flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
+    <section class="swiper-slide h-[200px] md:h-[250px] relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center text-white flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
       <div class="absolute inset-0 bg-blue-900/60"></div>
       <div class="relative container mx-auto text-center">
         <h2 class="text-xl md:text-2xl font-bold mb-2">PANDUAN PELAYANAN ADMINISTRASI PERKAPALAN DAN KEPELAUTAN</h2>
@@ -102,10 +101,10 @@
     </section>
 
     <!-- Slide 2 -->
-    <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
+    <section class="swiper-slide h-[200px] md:h-[250px] relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
       <div class="absolute inset-0 bg-blue-900/60"></div>
       <div class="relative container mx-auto flex justify-center">
-        <img src="https://hubla.dephub.go.id/storage/ksopumakassar/images/slider/10480/WzANZQCzTUW3jBhWGlHwl5tiDgRTaALWEOw7uVe4.png" alt="Slide Gambar" class="max-h-[200px] w-auto mx-auto rounded-xl shadow-lg" />
+        <img src="https://hubla.dephub.go.id/storage/ksopumakassar/images/slider/10480/WzANZQCzTUW3jBhWGlHwl5tiDgRTaALWEOw7uVe4.png" alt="Slide Gambar" class="max-h-[160px] w-auto mx-auto rounded-xl shadow-lg transition-transform duration-700 hover:scale-105" />
       </div>
     </section>
   </div>
@@ -117,6 +116,7 @@
   <!-- Pagination opsional -->
   <div class="swiper-pagination"></div>
 </div>
+
     <!-- Services Grid Section -->
     <section class="w-full px-8 py-8">
       <div class="text-center mb-8">
@@ -285,7 +285,7 @@
 			</ul>
 			<h3 class="font-semibold mt-3">Link Terkait :</h3>
 	<ul class="list-rapi">
-				<li><a href="https://dokumenpelaut.dephub.go.id/" ,,class="text-blue-600">Pendaftaran Buku Pelaut</a></li>
+				<li><a href="https://dokumenpelaut.dephub.go.id/" class="text-blue-600">Pendaftaran Buku Pelaut</a></li>
         <li><a href="https://vt.tiktok.com/ZSB2vuE5V/" class="text-blue-600"</a>Tutorial</li>
 			</ul>
         `;
@@ -513,44 +513,20 @@
         document.getElementById("service-modal").classList.add("hidden");
         document.body.style.overflow = "auto"; // buka kembali scroll halaman
       }
-      // var swiper = new Swiper(".mySwiper", {
-      //   loop: true,
-      //   pagination: {
-      //     el: ".swiper-pagination",
-      //     clickable: true,
-      //   },
-      //   navigation: {
-      //     nextEl: ".swiper-button-next",
-      //     prevEl: ".swiper-button-prev",
-      //   },
-      //   autoplay: {
-      //     delay: 4000,
-      //     disableOnInteraction: false,
-      //   },
    const swiper = new Swiper(".mySwiper", {
-  loop: true,
-  speed: 800,
-  autoplay: false,
-  effect: "creative",
-  creativeEffect: {
-    prev: {
-      translate: ["-20%", 0, -1], // geser dari kiri
-      opacity: 0.7,
+    loop: true,
+    speed: 600,
+    effect: "slide", // Efek geser aman dan halus
+    autoplay: false,
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
     },
-    next: {
-      translate: ["100%", 0, 0], // geser dari kanan
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
     },
-  },
-  navigation: {
-    nextEl: ".swiper-button-next",
-    prevEl: ".swiper-button-prev",
-  },
-  pagination: {
-    el: ".swiper-pagination",
-    clickable: true,
-  },
   });
-
     </script>
   </body>
 </html>
