--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <section class="swiper-slide relative z-0 bg-[url('https://hubla.dephub.go.id/hubla/assets/img/footer-bg.png')] bg-cover bg-center h-[200px] flex items-center justify-center py-5 px-4 transition-all duration-700 ease-in-out">
           <div class="absolute inset-0 bg-blue-900/60"></div>
           <div class="relative container mx-auto flex justify-center">
-            <img src="Maklumat.png" alt="Slide Gambar" class="max-h-[200px] w-auto mx-auto rounded-xl shadow-lg" />
+            <img src="https://hubla.dephub.go.id/storage/ksopumakassar/images/slider/10480/WzANZQCzTUW3jBhWGlHwl5tiDgRTaALWEOw7uVe4.png" alt="Slide Gambar" class="max-h-[200px] w-auto mx-auto rounded-xl shadow-lg" />
           </div>
         </section>
       </div>
