perbarui index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </div>
         </section>
       </div>
-      <!-- Tombol navigasi -->
+      <!-- navigasi -->
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
       <!-- Pagination opsional -->
